# src/routes/author/AuthorPresenter.kt
@@ -9,57 +9,61 @@ import io.ktor.swagger.experimental.getBodyParam
 import io.ktor.swagger.experimental.getPath
 import io.ktor.swagger.experimental.getQuery
 import io.ktor.swagger.experimental.httpException
+import routes.author.AuthorViewState
 
-class AuthorRoute {
+class AuthorPresenter {
 
-    val authors = mutableListOf<Author>()
     val interactor = AuthorInteractor()
-    var loggedInAuthor = Author(
-        id = 0,
-        username = "Anonym",
-        firstName = "John",
-        lastName = "Doe",
-        email = "none"
-    )
+    var state = AuthorViewState()
 
     suspend fun getAuthors(call: ApplicationCall) {
-        interactor.getArticles()
-        call.respond("oksa")
+
+        interactor.createAuthor(state.loggedInAuthor)
+
+        val authors = interactor.getAuthors()
+        state.authors = authors
+        call.respond(authors)
     }
 
     suspend fun loginAuthor(call: ApplicationCall) {
-        //val username = call.getQuery<String>("username")
-        interactor.createArticle()
-        call.respond("logged in as valaki9")
+        val username = call.getQuery<String>("username")
+        val author = state.authors.firstOrNull { it.username == username }
+        author?.let{ state.loggedInAuthor = author }
+        call.respond(author.toString())
     }
 
     suspend fun getAuthor(call: ApplicationCall) {
-        val authorId = call.getPath<String>("authorId").toInt()
-        val author = interactor.getArticle(authorId)
+        val authorId = call.getPath<String>("id").toInt()
+        val author = interactor.getAuthor(authorId)
         if (false) httpException(HttpStatusCode.BadRequest)
         if (false) httpException(HttpStatusCode.NotFound)
         call.respond(author)
     }
 
+    suspend fun createAuthor(call: ApplicationCall) {
+        val article = call.getBodyParam<Author>("body")
+        if (false) httpException(HttpStatusCode.BadRequest)
+        interactor.createAuthor(article)
+        call.respond(article)
+    }
+
     suspend fun updateAuthor(call: ApplicationCall) {
-        val authorId = call.getPath<String>("authorId").toLong()
         val body = call.getBodyParam<Author>("body")
-        authors.removeIf { it.id == authorId }
-        authors.add(body)
+        interactor.updateAuthor(body)
+
         if (false) httpException(HttpStatusCode.BadRequest)
         if (false) httpException(HttpStatusCode.NotFound)
 
-        call.respond("updated author with id: $authorId")
+        call.respond("updateAuthor")
     }
 
     suspend fun deleteAuthor(call: ApplicationCall) {
-        val authorId = call.getPath<String>("authorId").toLong()
-        authors.removeIf { it.id == authorId }
-
+        val id = call.getPath<String>("id").toInt()
+        interactor.deleteAuthor(id)
         if (false) httpException(HttpStatusCode.BadRequest)
         if (false) httpException(HttpStatusCode.NotFound)
 
-        call.respond("deleted author with id: $authorId")
+        call.respond("deleteAuthor")
     }
 
 }
